# scraping_learning

./: LICENSE  pyproject.toml
scarping_learning/: __main__.py  cities.json  cities.txt  connect_mongo.py  data.html  dom_ria.py  index.html  main.py  models.py  parcer.py  parcer_scroll.py  response.json  response_one.json  test.py
