[tool.poetry]
name = "scraping-learning"
version = "0.1.0"
description = ""
authors = ["kbuhantsev <k.buhantsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
requests = "^2.31.0"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
by = "^0.0.4"
mongoengine = "^0.27.0"
aiohttp = "^3.9.1"
pytest-playwright = "^0.4.4"
playwright = "^1.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
