[tool.poetry]
name = "scraping-learning"
version = "0.1.0"
description = ""
authors = ["kbuhantsev <k.buhantsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
requests = "^2.31.0"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
by = "^0.0.4"
mongoengine = "^0.28.1"
aiohttp = "^3.9.3"
pytest-playwright = "^0.4.4"
playwright = "^1.41.2"
fake-useragent = "^1.4.0"
selenium-wire = "^5.1.0"
undetected-chromedriver = "^3.5.5"
2captcha-python = "^1.2.2"
selenium-stealth = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
